# CursQt

./: CMakeLists.txt  data.cpp  help.qml  help1.qml  help2.qml  main.cpp  main.qml  qml.qrc  returned.qml  selled.qml  selling.cpp  selling.qml
